--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ node_modules
 !python-homework-autocheck
 helpforUkrainechildrensEDU/app/vendor/
 helpforUkrainechildrensEDU/app/app/vendor/
+/wp-content/themes/goiteens/package-lock.json
+/wp-content/themes/goiteens/node_modules
